munin (work)

  * Main: Optimised munin-cgi-graph a bit.
  * Main: Added option cgiurl_graph.
  * Packaging: Expand man-page macros properly on man-page generation 
    (Deb#286399).
  * Plugin: Added plugin generic/dhcpd3, created by Rune N. Skillingstad.
  * Plugin: Patch generic/bind9 to report "unnamed" as "other" (Nicolas 
    Stransky).
  * Plugin: linux/apt* has been forced to LANG=C, to get predictable output.
  * Plugin: Removed hardcoded host_name in linux/cps_.
  * Plugin: Added plugin linux/users, created by Michael Kaiser.

munin (1.1.8)

  * Munin-limits: Log less noise.
  * Munin-limits: Notify correctly in all situations.
  * Munin-graph: Treat CDEFs in fields with long names properly.
  * Munin-graph: Log an illegal STACK in the first field better (SF#1081903).
  * Munin-run: Now behaves properly when running invalid plugins (SF#1074242).
  * Munin-node: host_name in plugin-conf.d now overrides plugin output.
  * Munin-graph: Added "graph_period" option, to make "graph_sums" usable.
  * Munin-update: Fix bug when setting min to 0.
  * Munin-node-configure: Fix bug with underscore in wildcard plugins.
  * Plugin: New version of generic/smart_ by plugin creator (Nicolas
    Stransky) (SF#1072459).
  * Plugin: generic/uptime was re-classified as linux/uptime (SF#1074576).
  * Plugin: Renamed generic/folding@home to generic/foldingathome (SF#1074241).
  * Plugin: Modify generic/ping_ so it's compatible with Solaris ping
    (SF#1074545).
  * Plugin: Fixed broken autoconf in generic/sendmail_mailtraffic (SF#1074528).
  * Plugin: Patched sunos/cpu to work on Solaris 9 (SF#1077899).
  * Plugin: Major improvements to sunos/io_ops,bytes,busy, by Lupe Christoph
    (SF#1077898).
  * Plugin: Portability enhancementes to sunos/fs_df (SF#1077903).
  * Plugin: linux/fw_forwarded_local now initialises properly (Deb#284673).
  * Plugin: Added more sensible autoconf to generic/sybase_space.