@@ -45,14 +45,15 @@
 	    <table width='100%'>
 		  <TMPL_LOOP NAME="GRAPHINFO">
 		    <tr>
-		      <td class='wrap' colspan="5" align='left' valign='top'><TMPL_VAR NAME="INFO"></td>
+		      <td class='wrap' colspan="6" align='left' valign='top'><TMPL_VAR NAME="INFO"></td>
 		    </tr>
 		    <tr>
-		      <td colspan="5"><hr class="ruler2" /></td>
+		      <td colspan="6"><hr class="ruler2" /></td>
 		    </tr>
 		  </TMPL_LOOP>
 		    <tr>
 			  <th align='left' valign='top'>Field</th>
+			  <th align='left' valign='top'><span title="For use in munin.conf">Internal name</span></th>
 			  <th align='center' valign='top'><a href="../definitions.html#data_types">Type</a></th>
 			  <th align='center' valign='top'>Warn</th>
 			  <th align='center' valign='top'>Crit</th>
@@ -61,11 +62,12 @@
 		  <TMPL_LOOP NAME="FIELDINFO">
 		    <TMPL_IF NAME="HR">
 		      <tr>
-		        <td colspan="5"><hr class="ruler" /></td>
+		        <td colspan="6"><hr class="ruler" /></td>
 		      </tr>
 		    </TMPL_IF>
 		    <tr>
-		      <td align='left' valign='top'><span title="Internal field name (for use in munin.conf): <TMPL_VAR ESCAPE="HTML" NAME="FIELD">"><TMPL_VAR ESCAPE="HTML" NAME="LABEL"></span></td>
+		      <td align='left' valign='top'><TMPL_VAR ESCAPE="HTML" NAME="LABEL"></td>
+		      <td align='left' valign='top'><span title="For use in munin.conf"><TMPL_VAR ESCAPE="HTML" NAME="FIELD"></span></td>
 		      <td align='center' valign='top'><TMPL_VAR NAME="TYPE"></td>
 		      <td align='center' valign='top'><TMPL_IF NAME="STATE_WARNING"><div class='warntext'></TMPL_IF><TMPL_VAR NAME="WARN"><TMPL_IF NAME="STATE_WARNING"></div></TMPL_IF></td>
 		      <td align='center' valign='top'><TMPL_IF NAME="STATE_CRITICAL"><div class='crittext'></TMPL_IF><TMPL_VAR NAME="CRIT"><TMPL_IF NAME="STATE_CRITICAL"></div></TMPL_IF></td>
